--- a/docu/.gitignore
+++ b/docu/.gitignore
@@ -18,3 +18,13 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Missing patterns
+dist/
+*.log
+*.env
+Thumbs.db
+*.tmp
+*.swp
+.vscode/
+.idea/
