--- a/docu/package.json
+++ b/docu/package.json
@@ -18,10 +18,14 @@
     "@docusaurus/core": "3.9.2",
     "@docusaurus/preset-classic": "3.9.2",
     "@mdx-js/react": "^3.0.0",
+    "@tabler/icons-react": "^3.35.0",
+    "ajv": "^8.17.1",
     "clsx": "^2.0.0",
+    "gray-matter": "^4.0.3",
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "remark-docusaurus-tabs": "^0.2.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.9.2",
