--- a/docu/package.json
+++ b/docu/package.json
@@ -21,6 +21,7 @@
     "@tabler/icons-react": "^3.35.0",
     "ajv": "^8.17.1",
     "clsx": "^2.0.0",
+    "docusaurus-plugin-search-local": "^2.1.2",
     "gray-matter": "^4.0.3",
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
