--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
     "docusaurus-plugin-search-local": "^2.1.2"
+  },
+  "engines": {
+  "node": "18.x"
   }
 }
+
